# cpp-decorator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  pch.h  utility.cpp  utility.h
